# Brute-Force-Game-Engine

./: CMakeLists.txt  DEPENDENCIES  INSTALL  enuminit.bat  enuminit.sh
code/: CMakeLists.txt
code/demos/: CMakeLists.txt
code/demos/Pong/: BallControl.h  BarControl.h  CMakeLists.txt  Main.cpp  PongDefinitions.h  PongFactory.h  PongState.h  PropertyPlugin.cpp  PropertyPlugin.h  Score.cpp  Score.h  ViewPongState.h
code/demos/SpaceInvaders/: CMakeLists.txt  Main.cpp
code/engine/: CMakeLists.txt
code/engine/AudioBlaster/: AudioBlaster.cpp  AudioBlaster.h  AudioEvent.h  AudioEvent_fwd.h  AudioObject.cpp  AudioObject.h  AudioObjectFactory.cpp  AudioObjectFactory.h  CMakeLists.txt  Defines.h  Enums.xml  FileBase.h  FileFactory.cpp  FileFactory.h  HelperFunctions.cpp  HelperFunctions.h  Interface.cpp  Interface.h  Level.cpp  Level.h  Loader.h  Main.cpp  Main.h  OggFile.cpp  OggFile.h  OpenALUpdateHandler.cpp  OpenAlUpdateHandler.h  Stream.cpp  Stream.h  StreamWatch.cpp  StreamWatch.h  Transport.h  WaveFile.cpp  WaveFile.h
code/engine/Base/: CDummyMutex.h  CEntryPoint.h  CInterpolate.h  CLogger.cpp  CLogger.h  CMakeLists.txt  CSingleton.h  CVersion.cpp  CVersion.h  Compiler.h  Cpp.h  Examples.cpp  Examples.h  NameCurrentThread.cpp  NameCurrentThread.h  Network.h  Pause.h  TestAppDeco.h  dummy.cpp
code/engine/Controller/: Action.cpp  Action.h  Axis.h  Button.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerEvents.h  ControllerEvents_fwd.h  ControllerInterface.cpp  ControllerInterface.h  Delegater.h  Enums.xml  EventDumper.cpp  EventDumper.h  OISDevice.h  OISUtils.cpp  OISUtils.h  State.cpp  State.h  StateInsertion.cpp  StateInsertion.h  VIPBase.cpp  VIPBase.h  VIPComponents.h  VIPEnumToType.h  VIPEnvironment.h  VIPGenerator.h  VIPXmlInitializer.cpp  VIPXmlInitializer.h
code/engine/Core/: Archiver.cpp  Archiver.h  CMakeLists.txt  CharArray.h  ClockUtils.cpp  ClockUtils.h  Defs.h  DynamicVariable.h  Enums.xml  ExternalTypes.h  ExternalTypes_fwd.h  Handle.h  Location.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Path.cpp  Path.h  ProxyPolicy.h  ProxyStorage.h  ProxyType.h  ShowException.cpp  ShowException.h  TupleCaller.h  Types.h  USPResource.h  Utils.cpp  Utils.h  qv4.cpp  qv4.h  v3.cpp  v3.h
code/engine/EnumGen/: CMakeLists.txt  Exception.h  Generator.h  Parser.h  Shared.h  main.cpp
code/engine/EventSystem/: CMakeLists.txt  Emitter.h  Event.h  EventFactory.h  Event_fwd.h
code/engine/EventSystem/Core/: CommunicationPolicy.cpp  CommunicationPolicy.h  EventChannel.cpp  EventChannel.h  EventCore.vcproj  EventDefs.h  EventFunctor.h  EventFunctorTable.h  EventHeader.h  EventIds.h  EventInterface.h  EventLoop.cpp  EventLoop.h  EventManager.cpp  EventManager.h  EventPool.h  EventProcessor.cpp  IEventLoop.h  IPCommunication.cpp  IPCommunication.h  TestListener.h  ThreadingPolicy.cpp  ThreadingPolicy.h
code/engine/EventSystem/Core/network/: ClientChannel.cpp  ClientChannel.h  NetworkChannel.cpp  NetworkChannel.h  ServerChannel.cpp  ServerChannel.h
code/engine/Model/: Adapter.h  CMakeLists.txt  Defs.h  Enums.xml  Environment.cpp  Environment.h  GameObject.cpp  GameObject.h  Interface.cpp  Interface.h  Managed.cpp  Managed.h  Module.h  Sector.cpp  Sector.h  Trigger.h  Waypoint.cpp  Waypoint.h
code/engine/Model/Events/: GameObjectEvent.h  GameObjectEvent_fwd.h  SectorEvent.h  SectorEvent_fwd.h  TriggerEvent.h
code/engine/Model/Loader/: Exceptions.h  FileLoader.cpp  FileLoader.h  GameObjectFactory.cpp  GameObjectFactory.h  Interpreter.cpp  Interpreter.h  SectorFactory.cpp  SectorFactory.h  Tags.h  Types.h
code/engine/Model/Property/: Concept.cpp  Concept.h  ConceptFactory.h  ConceptId.h  Plugin.h  Serialiser.h  SpaceConceptFactory.cpp  SpaceConceptFactory.h  SpacePlugin.cpp  SpacePlugin.h  Value.h  ValueId.h
code/engine/Model/Property/Concepts/: AutoNavigator.cpp  AutoNavigator.h  Camera.cpp  Camera.h  Destroyable.cpp  Destroyable.h  Physical.cpp  Physical.h  SelfDestruction.cpp  SelfDestruction.h  ThrustControl.cpp  ThrustControl.h  Triggers.cpp  Triggers.h  WeaponRack.cpp  WeaponRack.h
code/engine/Physics/: CMakeLists.txt  Defs.h  Enums.xml  Event.h  Event_fwd.h  Interface.cpp  Interface.h  OdeTriMesh.cpp  OdeTriMesh.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsObject.cpp  PhysicsObject.h
code/engine/View/: CMakeLists.txt  Camera.cpp  Camera.h  CameraCreation.h  Console.cpp  Console.h  ControllerMyGuiAdapter.cpp  ControllerMyGuiAdapter.h  Convert.cpp  Convert.h  CreatePlane.cpp  CreatePlane.h  Defs.h  Effect.cpp  Effect.h  Enums.xml  Event.h  Event_fwd.h  Explosion.cpp  Explosion.h  Fps.cpp  Fps.h  HudElement.cpp  HudElement.h  Interface.cpp  Interface.h  KnightRiderExplosionTest.cpp  KnightRiderExplosionTest.h  Light.cpp  Light.h  LightCreation.h  LoadMesh.cpp  LoadMesh.h  Main.cpp  Main.h  MassTest.cpp  MassTest.h  MenuEventData.cpp  MenuEventData.h  ObjectCreation.cpp  (+15 more)
code/tests/: CMakeLists.txt
code/tests/EventSystem/: CMakeLists.txt  EventTypesTest.cpp
code/tools/: CMakeLists.txt
code/tools/Composer/: Actions.h  AdapterControl.h  BaseFeature.h  CMakeLists.txt  CameraControl.h  Event.h  Event_fwd.h  LightControl.h  Main.cpp  MaterialChange.h  MeshControl.h  MeshFeature.h  OpenSaveDialog.cpp  OpenSaveDialog.h  SharedData.h  SkyBoxSelect.h  SubEntitySelect.h
doc/: Doxyfile  Mainpage.h
scripts/control/: Composer.xml  Console.xml  Pong.xml  SpaceInvaders.xml
scripts/gui/: guiBase.xml  guiFont.xml  guiLanguage.xml  guiLanguage_english.xml  guiLanguage_german.xml  guiLayer.xml  guiResources.xml  guiSettings.xml  guiTags.xml  guiTheme.xml
scripts/gui/hud/: Console.layout  FPS.layout  PongScore.layout
scripts/gui/menu/: Adapter.layout  Animation.layout  ChooseListItem.layout  Composer.layout  Light.layout  OpenSaveDialog.layout  Preview.layout  infoPanel.layout  subMesh.layout  texUnit.layout
scripts/levels/default/: Concept.xml  Object.xml  Value.xml  readme.txt
scripts/levels/pong/: Concept.xml  Object.xml  Value.xml
scripts/levels/spaceinvaders/: Adapter.xml  Concept.xml  Value.xml  (+1 more)
share/scripts/: make_deb.sh  start.bat  start_threads.bat
(+6 files in other folders)
