cmake_minimum_required(VERSION 2.6)

INCLUDE(USE)

USE_INIT_PACKAGE(SpaceInvaders "0.3.0")

FILE(GLOB SpaceInvaders_SOURCES *.cpp)
FILE(GLOB SpaceInvaders_HEADERS *.h)

INCLUDE_DIRECTORIES(${BOOST_GEOMETRY_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${LIBSNDFILE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${VORBIS_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ODE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DdSINGLE)
ADD_DEFINITIONS(-DTIXML_USE_STL)

ADD_EXECUTABLE(SpaceInvaders ${SpaceInvaders_SOURCES} ${SpaceInvaders_HEADERS})

TARGET_LINK_LIBRARIES(SpaceInvaders
	AudioBlaster
	Base
	Controller
	EventCore
	Model
	Core
	View
	${BoostLog_LIBRARIES}
	${Boost_LIBRARIES}
	${OGRE_LIBRARIES}
	${OIS_LIBRARIES}
	${MYGUI_LIBRARIES}
	${OPENAL_LIBRARY}
	${VORBIS_LIBRARIES}
	TinyXML
	ode
)

INSTALL(TARGETS SpaceInvaders
	RUNTIME DESTINATION ${USE_BIN_DIR}
	COMPONENT runtime
)
