cmake_minimum_required(VERSION 2.6)

INCLUDE(USE)

USE_INIT_PACKAGE(Base "1.0.0")

FILE(GLOB Base_SOURCES *.cpp)
FILE(GLOB Base_HEADERS *.h)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

ADD_LIBRARY(Base STATIC ${Base_SOURCES} ${Base_HEADERS})

INSTALL(TARGETS Base 
	ARCHIVE DESTINATION ${USE_LIB_DIR}
	COMPONENT devel)

INSTALL(FILES ${Base_HEADERS} 
	DESTINATION ${USE_PACKAGE_INCLUDE_DIR}
	COMPONENT devel)

