cmake_minimum_required(VERSION 2.6)

INCLUDE(USE)

USE_INIT_PACKAGE(Controller "1.0.0")

FILE(GLOB Controller_SOURCES *.cpp)
FILE(GLOB Controller_HEADERS *.h *.hh *.xml)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BOOST_GEOMETRY_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)
ADD_CUSTOM_TARGET (ControllerEnums
	EnumGen --input ${CMAKE_CURRENT_SOURCE_DIR}/Enums.xml
	        --header ${CMAKE_CURRENT_SOURCE_DIR}/Enums.hh
	        --source ${CMAKE_CURRENT_SOURCE_DIR}/Enums.cpp
	DEPENDS EnumGen
)

ADD_DEFINITIONS(-DTIXML_USE_STL)
#ADD_DEFINITIONS(-DCONTROLLER_DEBUG)

ADD_LIBRARY(Controller STATIC ${Controller_SOURCES} ${Controller_HEADERS})
TARGET_LINK_LIBRARIES(Controller ${OIS_LIBRARIES} ${Boost_LIBRARIES})

ADD_DEPENDENCIES(Controller ControllerEnums Core TinyXML)

INSTALL(TARGETS Controller
		ARCHIVE DESTINATION ${USE_LIB_DIR}
		COMPONENT devel)
		
INSTALL(FILES ${Controller_HEADERS}
		DESTINATION "${USE_PACKAGE_INCLUDE_DIR}"
		COMPONENT devel)
