cmake_minimum_required(VERSION 2.6)

INCLUDE(USE)

USE_INIT_PACKAGE(Core "1.1.1")

FILE(GLOB Core_SOURCES *.cpp)
FILE(GLOB Core_HEADERS *.h *.hh *.xml)

SET_SOURCE_FILES_PROPERTIES(${Core_SOURCES} COMPILE_FLAGS -DTIXML_USE_STL)

INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BOOST_GEOMETRY_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_CUSTOM_TARGET(CoreEnums
	EnumGen --input ${CMAKE_CURRENT_SOURCE_DIR}/Enums.xml
	        --header ${CMAKE_CURRENT_SOURCE_DIR}/Enums.hh
	        --source ${CMAKE_CURRENT_SOURCE_DIR}/Enums.cpp
	DEPENDS EnumGen
)

IF(WIN32)
  ADD_DEFINITIONS(-DCORE_EXPORTS)
ENDIF(WIN32)

ADD_LIBRARY(Core SHARED ${Core_SOURCES} ${Core_HEADERS})

TARGET_LINK_LIBRARIES(Core
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	Base
	TinyXML
)

ADD_DEPENDENCIES(Core CoreEnums TinyXML)

INSTALL(TARGETS Core
		LIBRARY DESTINATION ${USE_LIB_DIR}
		RUNTIME DESTINATION ${USE_LIB_DIR}
		COMPONENT runtime)

INSTALL(FILES ${Core_HEADERS}
		DESTINATION ${USE_PACKAGE_INCLUDE_DIR}
		COMPONENT devel)
