cmake_minimum_required(VERSION 2.6)

INCLUDE(USE)

USE_INIT_PACKAGE(EnumGen "1.0.0")

FILE(GLOB EnumGen_SOURCES *.cpp)
FILE(GLOB EnumGen_HEADERS *.h)

SET_SOURCE_FILES_PROPERTIES(${EnumGen_SOURCES} COMPILE_FLAGS -DTIXML_USE_STL)

INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

ADD_EXECUTABLE(EnumGen ${EnumGen_SOURCES} ${EnumGen_HEADERS})

TARGET_LINK_LIBRARIES(EnumGen TinyXML ${Boost_LIBRARIES})

INSTALL(TARGETS EnumGen 
		RUNTIME DESTINATION ${USE_BIN_DIR}
		COMPONENT devel)
